--- a/app/globals.css
+++ b/app/globals.css
@@ -127,6 +127,7 @@
   --color-q-orange-extra-light: #e4ee2e;
   --color-q-background: #faf2f0;
   --color-q-blue: #6d7ca7;
+  --color-q-neon-blue: #12a2c9;
   --font-jost: var(--font-jost);
   --font-reem-kufi-fun: var(--font-reem-kufi-fun);
 }
