--- a/app/globals.css
+++ b/app/globals.css
@@ -124,7 +124,10 @@
 }
 
 @theme {
+  --color-q-card-background: #ebe3e1;
+  --color-q-card-background-highlight: #ecb58e;
   --color-q-text-dark-700: #3d3638;
+  --color-q-text-dark-darkest: #231f20;
   --color-q-background: #faf2f0;
   --color-q-black-for-polaroid: hsla(345, 31%, 10%, 60%);
   --color-q-wite-almost: #f6f6f6;
