--- a/app/globals.css
+++ b/app/globals.css
@@ -124,6 +124,8 @@
 }
 
 @theme {
+  --color-q-review-card-background: #f3d4b6;
+  --color-q-review-card-border: #ccbfb2;
   --color-q-card-background: #ebe3e1;
   --color-q-card-background-highlight: #ecb58e;
   --color-q-text-dark-700: #3d3638;
@@ -155,11 +157,29 @@
     #7485b3 90%
   );
 }
+.my-reviews-gradient {
+  background: linear-gradient(
+    to right,
+    transparent 0%,
+    transparent 65%,
+    var(--color-q-background) 96%
+  );
+}
 
 .nav-height {
   height: 6rem;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
 @custom-variant desktop (@media (max-width: 1353px));
 @custom-variant tablet (@media (max-width: 1087px));
 @custom-variant phone (@media (max-width: 708px));
