feat: make nav bar grow and sching on scroll,using framer motion

--- a/app/globals.css
+++ b/app/globals.css
@@ -168,7 +168,10 @@
 }
 
 .nav-height {
-  height: 6rem;
+  height: 5rem;
+}
+.nav-height-small {
+  height: 3rem;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
