--- a/app/globals.css
+++ b/app/globals.css
@@ -179,10 +179,7 @@
 @theme {
   --breakpoint-*: initial;
 }
-/* 
-* {
-  border: 1 solid black;
-} */
+
 .my-gradient {
   background: #f6f6f6;
   background-size: 100% 100%;
@@ -221,4 +218,8 @@
 }
 @custom-variant desktopSM (@media (max-width: 1360px));
 @custom-variant tablet (@media (max-width: 1087px));
-@custom-variant phone (@media (max-width: 708px));
+@custom-variant mobile (@media (max-width: 708px));
+
+/* * {
+  border: 1 solid black;
+} */
