--- a/app/globals.css
+++ b/app/globals.css
@@ -206,6 +206,14 @@
   height: 3rem;
 }
 
+@utility nav-height {
+  height: 5rem;
+}
+
+@utility nav-height-small {
+  height: 3rem;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
